# rp2040-ehv1-spi-bme280

./: Cargo.toml  MIT  README.md
rp2040_lib/: Cargo.toml
rp2040_lib/src/: lib.rs  my_macro.rs  panic.rs  rtc8564.rs  sc2004.rs  sd.rs
rp2040_lib/src/bme280/: i2c.rs  spi.rs
src/: main.rs
