workspace = { members = ["rp2040_lib"] }
[package]
edition = "2021"
name = "rp2040-ehv1-spi-bme280"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]

fugit = "0.3.7"
# nb = "1.0.0"

rp2040-hal = "0.10.2"
rp-pico = "0.9.0"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"
critical-section = "1.1.2"
hd44780-driver = "0.4.0"

embedded-sdmmc = "0.5.0"

rp2040_lib = { path = "rp2040_lib" }

embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7", features = [
  "unproven",
] }

